Node 20: add .nvmrc, engines field; pin Vercel functions to nodejs20.x

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   ],
   "author": "Brett Stark",
   "license": "MIT",
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
