--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "public": true,
+  "functions": {
+    "api/**.js": { "runtime": "nodejs20.x" }
+  },
   "headers": [
     {
       "source": "/(.*)",
