Add WFHroulette CLI and web frontend

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build": "echo 'Static site - no build needed'",
     "deploy": "vercel --prod",
     "prepare": "husky",
-    "lint": "eslint . --ext .js,.html --fix && stylelint **/*.css --fix",
+    "lint": "eslint . --ext .js,.html --fix && stylelint 'web/**/*.css' --allow-empty-input",
     "format": "prettier --write **/*.{js,html,css,json,md}",
-    "quality": "npm run format && npm run lint && npm audit"
+    "quality": "npm run format && npm run lint && npm audit",
+    "wfh": "node cli.js"
   },
   "keywords": [
     "brett-stark",
