Resolve merge conflict in package.json

--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "build": "echo 'Static site - no build needed'",
     "deploy": "vercel --prod",
     "prepare": "husky",
-    "lint": "eslint . --ext .js,.html && stylelint **/*.css",
-    "lint:fix": "eslint . --ext .js,.html --fix && stylelint **/*.css --fix",
+    "lint": "eslint . --fix && stylelint **/*.css --fix",
     "format": "prettier --write **/*.{js,html,css,json,md}",
-    "format:check": "prettier --check **/*.{js,html,css,json,md}",
+    "quality": "npm run format && npm run lint && npm audit",
+    "format:check": "prettier --check .",
     "security:audit": "npm audit --audit-level high",
-    "security:secrets": "node -e \"const fs=require('fs');const files=['.env','.env.local','package.json'];files.forEach(f=>{if(fs.existsSync(f)){const c=fs.readFileSync(f,'utf8');if(/[\\\"\\'][a-zA-Z0-9+/]{20,}[\\\"\\']/.test(c)){console.error('❌ Potential hardcoded secrets in '+f);process.exit(1)}}});console.log('✅ No secrets detected')\"",
-    "quality": "npm run format && npm run lint && npm audit"
+    "security:secrets": "node -e \"const fs=require('fs');const content=fs.readFileSync('package.json','utf8');if(/[\\\"\\'][a-zA-Z0-9+/]{20,}[\\\"\\']/.test(content)){console.error('❌ Potential hardcoded secrets in package.json');process.exit(1)}else{console.log('✅ No secrets detected in package.json')}\"",
+    "security:config": "node setup.cjs --security-config",
+    "lighthouse:ci": "lhci autorun",
+    "lighthouse:upload": "lhci upload",
+    "validate:docs": "node setup.cjs --validate-docs",
+    "validate:comprehensive": "node setup.cjs --comprehensive",
+    "validate:all": "npm run validate:comprehensive && npm run security:audit",
+    "lint:fix": "eslint . --fix && stylelint \"public/**/*.{css,scss,sass,less,pcss}\" --fix --allow-empty-input"
   },
   "keywords": [
     "brett-stark",
@@ -43,10 +49,13 @@
     "stylelint": "^16.2.1",
     "stylelint-config-standard": "^36.0.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
+    "lint-staged": "^15.2.2",
+    "eslint-plugin-security": "^3.0.1",
+    "globals": "^15.9.0",
+    "@lhci/cli": "^0.14.0"
   },
   "lint-staged": {
-    "**/*.{js,html}": [
+    "**/*.{js,jsx,mjs,cjs,html}": [
       "eslint --fix",
       "prettier --write"
     ],
@@ -54,7 +63,7 @@
       "stylelint --fix",
       "prettier --write"
     ],
-    "**/*.{json,md}": [
+    "**/*.{json,md,yml,yaml}": [
       "prettier --write"
     ]
   }
