--- a/package.json
+++ b/package.json
@@ -61,9 +61,14 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
     "@eslint/js": "^9.39.2",
     "@lhci/cli": "^0.15.1",
+    "@size-limit/file": "^11.0.0",
     "@vitest/coverage-v8": "^4.0.16",
+    "axe-core": "^4.10.0",
+    "commitlint": "^20.3.1",
     "create-qa-architect": "^5.4.3",
     "eslint": "^9.39.2",
     "eslint-plugin-security": "^3.0.1",
@@ -71,14 +76,10 @@
     "husky": "^9.0.11",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
+    "size-limit": "^11.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
-    "vitest": "^4.0.15",
-    "size-limit": "^11.0.0",
-    "@size-limit/file": "^11.0.0",
-    "@commitlint/cli": "^19.0.0",
-    "@commitlint/config-conventional": "^19.0.0",
-    "axe-core": "^4.10.0"
+    "vitest": "^4.0.15"
   },
   "lint-staged": {
     "**/*.{js,html}": [
