chore: update to qa-architect v5.10.1
- CI-aware Husky prepare script (skips in CI environments)
- Updated Smart Test Strategy (E2E/command tests excluded from pre-push)
- Configuration updates for workflow mode

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "python -m http.server 3000 --directory public",
     "build": "echo 'Static site - no build needed'",
     "deploy": "vercel --prod",
-    "prepare": "husky",
+    "prepare": "[ \"$CI\" = \"true\" ] && echo 'Skipping Husky in CI' || husky",
     "lint": "eslint . && stylelint **/*.css",
     "lint:fix": "eslint . --fix && stylelint **/*.css --fix",
     "format": "prettier --write **/*.{js,html,css,json,md}",
