--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -100,6 +100,7 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: '1.0.0'
+
       - name: Display Detection Report
         run: |
           echo "📊 Project Detection Results (Minimal Mode)"
@@ -232,7 +233,7 @@ jobs:
           if [ -f setup.js ]; then
             node setup.js --security-config
           else
-            node node_modules/create-qa-architect/setup.js --security-config
+            npx create-qa-architect@latest --security-config
           fi
 
       - name: Security pattern detection
@@ -310,7 +311,6 @@ jobs:
             echo "::error::Test suite exceeded 5-minute performance budget!"
             exit 1
           }
-            gitleaks-8.28.0-linux-x64-
 
   # Step 4: Documentation - run for production-ready projects
   documentation:
@@ -349,7 +349,7 @@ jobs:
           if [ -f setup.js ]; then
             node setup.js --security-config
           else
-            node node_modules/create-qa-architect/setup.js --security-config
+            npx create-qa-architect@latest --security-config
           fi
 
       - name: Documentation validation
@@ -358,7 +358,7 @@ jobs:
           if [ -f setup.js ]; then
             node setup.js --validate-docs
           else
-            node node_modules/create-qa-architect/setup.js --validate-docs
+            npx create-qa-architect@latest --validate-docs
           fi
 
       - name: Documentation consistency and security audit freshness
@@ -368,7 +368,7 @@ jobs:
           if [ -f scripts/check-docs.sh ]; then
             bash scripts/check-docs.sh
           else
-            bash node_modules/create-qa-architect/scripts/check-docs.sh
+            echo "No check-docs.sh found - skipping documentation consistency check"
           fi
 
       - name: Package size and contents validation
