--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,36 +1,29 @@
+# Dependabot configuration — optimized to reduce CI minutes
+
 version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
-      interval: 'weekly'
-      day: 'monday'
-      time: '09:00'
-    open-pull-requests-limit: 5
-    reviewers:
-      - 'brettstark73'
-    assignees:
-      - 'brettstark73'
+      interval: 'monthly'
+    open-pull-requests-limit: 2
+    labels:
+      - 'dependencies'
     commit-message:
-      prefix: 'deps:'
+      prefix: 'deps'
       include: 'scope'
     groups:
-      vitest:
-        applies-to: version-updates
+      all-dependencies:
         patterns:
-          - 'vitest'
-          - '@vitest/*'
-      dev-dependencies:
-        applies-to: version-updates
-        patterns:
-          - '@types/*'
-          - 'eslint*'
-          - 'prettier'
-          - 'stylelint*'
-          - 'husky'
-          - 'lint-staged'
-      production-dependencies:
-        applies-to: version-updates
-        patterns:
-          - 'express'
-          - 'node-fetch'
+          - '*'
+
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: 'monthly'
+    open-pull-requests-limit: 1
+    labels:
+      - 'dependencies'
+      - 'github-actions'
+    commit-message:
+      prefix: 'deps(actions)'
